# PROMETHUS

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  go.mod  package.json  pyproject.toml
.github/workflows/: ci.yml
ai/core/: knowledge_graph.py
ai/tools/: forge.py
ai/training/: evolution.py
core/prometheus-forge/: Cargo.toml
core/prometheus-forge/src/: generator.rs
core/prometheus-memory/: Cargo.toml
core/prometheus-memory/src/: lib.rs
core/prometheus-runtime/: Cargo.toml
core/prometheus-runtime/src/: lib.rs  main.rs
core/prometheus-runtime/src/agent/: evolution.rs  genome.rs  mod.rs
core/prometheus-runtime/src/protocol/: mod.rs  uap.rs
core/prometheus-runtime/src/runtime/: events.rs
core/prometheus-runtime/src/swarm/: consciousness.rs  market.rs  mod.rs  red_team.rs
core/prometheus-wasm/: Cargo.toml
core/prometheus-wasm/src/: lib.rs
docs/: api-reference.md  architecture.md  getting-started.md  release-checklist.md  uap-spec.md
gateway/cmd/gateway/: main.go
gateway/internal/router/: auth.go  db_errors.go  events.go  handlers.go  models.go  postgres.go  query.go  replay_guard.go  replay_metric_point.go  replay_metric_record.go  replay_metrics.go  repository.go  router.go  router_test.go  store.go  (+1 more)
gateway/proto/: agent.proto  forge.proto  memory.proto  swarm.proto
infra/kubernetes/: ingress.yaml  namespace.yaml
infra/sql/: 001_init.sql
scripts/: benchmark.sh  migrate.sh  seed_knowledge.py  setup.sh  smoke-test.sh
web/: package.json
web/app/: layout.tsx  page.tsx
(+8 files in other folders)
