[package]
name = "prometheus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atomic_float.workspace = true
chrono.workspace = true
dashmap.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
